[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-mcp-server"
version = "1.0.0"
description = "A GitHub MCP server demo with create repository functionality"
authors = [{name = "Joseph", email = "joseph@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/Joseph19820124/joseph-github-mcp-server"
Repository = "https://github.com/Joseph19820124/joseph-github-mcp-server"
Issues = "https://github.com/Joseph19820124/joseph-github-mcp-server/issues"

[project.scripts]
github-mcp-server = "main:main"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["src"] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
